# food-calc

./: .gitignore  app.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
assets/: app.py
assets/templates/: index.html
templates/: index.html
utils/: app.py  food_calculator.py
